syntax="proto3";

package calculator;
option go_package="calculatorpb";

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}


message SumResponse{
    int32 result = 1;
}

service CalculateService{
        // Unary
    rpc Sum(SumRequest)returns(SumResponse);

    // Server Sreaming
    rpc CalcPrime(CalcPrimeRequest) returns (stream CalcPrimeResponse){};

    // Client Sreaming
    rpc CalcAverage(stream CalcAvgRequest) returns (CalcAvgResponse){}
}

// Server Sreamming

message CalcPrimeRequest{
    int32 number = 1;
}

message CalcPrimeResponse{
    int32 prime_factor = 1;
}

// Clients Sreaming 
message CalcAvgRequest {
    int32 number = 1;
}

message CalcAvgResponse {
    double ave_result = 1;
    }